# Expanse-Tracking-System

./: .gitignore  Makefile  README.md  expense_tracker.db
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  expense_tracker.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07d14164c9fb_add_group_expense_splitting_tables.py  20260613_0001_initial_schema.py  20260613_0002_payment_accounts.py  20260712_0003_email_verification.py  20260713_0004_otp_limits.py  4e6b7d4b1a2c_remove_budgets_table.py  5fad776225d9_add_login_rate_limiting_fields.py  bb425ad9825b_remove_notifications_feature.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: accounts.py  auth.py  budgets.py  categories.py  groups.py  notifications.py  receipts.py  reports.py  transactions.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: account.py  auth.py  budget.py  category.py  group.py  group_expense.py  notification.py  receipt.py  report.py  settlement.py  transaction.py
backend/app/services/: accounts.py  auth.py  email.py  finance.py  group_expenses.py  groups.py  notifications.py  planning.py  receipt_extraction.py  receipts.py  settlements.py
backend/smart_expense_tracker_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_accounts.py  test_auth.py  test_budgets.py  test_config.py  test_group_expenses.py  test_health.py  test_notifications.py  test_receipts.py  test_transactions.py
(+259 files in other folders)
