[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-expense-tracker-api"
version = "0.1.0"
description = "FastAPI backend for the smart expense tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.12,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
